1일차 마무리 커밋

--- a/ex01-01.html
+++ b/ex01-01.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>내웹브라우져</title>
-</head>
-<body>
+  </head>
+  <body>
+    <a href="index.html">홈으로</a><br />
     <h1>h1 태그</h1>
     <h2>h2 태그</h2>
     <h2>h2 태그</h2>
@@ -15,7 +16,7 @@
     <h6>h6 태그</h6>
     <h7>h7 태그</h7>
     <h8>h8 태그</h8>
-    
+
     하이요 메롱
     <!-- h$*3 -->
     <h1></h1>
@@ -24,8 +25,6 @@
     <!-- h${h$ h태그입니다.}*3 -->
     <h1>h1 h태그입니다.</h1>
     <h2>h2 h태그입니다.</h2>
-    <h3>h3 h태그입니다.</h3> 
-    
-
-</body>
+    <h3>h3 h태그입니다.</h3>
+  </body>
 </html>
