--- a/ex01-02.html
+++ b/ex01-02.html
@@ -5,9 +5,10 @@
     <!-- head 태그는 웹블라우저가 해석해야할 html 문서의 정보를 저장 -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>하이퍼링쿠</title>
+    <title>하이퍼링크</title>
   </head>
   <body>
+    <a href="index.html">홈으로</a><br />
     <!-- body 웹브라우저가 해석해야할 html 문서의 구조 범위를 지정 -->
     <!-- 즉 body의 내용 및 구조는 사용자가 화면을 통해서 볼 수 있는 내용 -->
     <h1><a href="https://naver.com">네이버</a></h1>
