--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>HTML 실습</h1>
-    <h2>1일차</h2>
+    <h1 style="background-color: lightgreen">HTML 실습</h1>
+    <h2 style="background-color: olive">1일차</h2>
     <a href="ex01-01.html">예제1</a><br />
     <a href="ex01-02.html">예제2</a><br />
     <a href="ex01-03.html">예제3</a><br />
@@ -18,5 +18,8 @@
     <a href="ex01-08.html">예제8</a><br />
     <a href="ex01-09.html">예제9</a><br />
     <a href="과제.html">과제</a><br />
+
+    <h2 style="background-color: olive">2일차</h2>
+    <a href="ex02-01.html">예제1</a>
   </body>
 </html>
