--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <body>
     <h1 style="background-color: lightgreen">HTML 실습</h1>
     <h2 style="background-color: olive">1일차</h2>
-    <a href="ex01-01.html">예제1</a><br />
-    <a href="ex01-02.html">예제2</a><br />
-    <a href="ex01-03.html">예제3</a><br />
-    <a href="ex01-04.html">예제4</a><br />
-    <a href="ex01-05.html">예제5</a><br />
-    <a href="ex01-06.html">예제6</a><br />
-    <a href="ex01-07.html">예제7</a><br />
-    <a href="ex01-08.html">예제8</a><br />
-    <a href="ex01-09.html">예제9</a><br />
-    <a href="과제.html">과제</a><br />
+    <a href="./1일차/ex01-01.html">예제1</a><br />
+    <a href="./1일차/ex01-02.html">예제2</a><br />
+    <a href="./1일차/ex01-03.html">예제3</a><br />
+    <a href="./1일차/ex01-04.html">예제4</a><br />
+    <a href="./1일차/ex01-05.html">예제5</a><br />
+    <a href="./1일차/ex01-06.html">예제6</a><br />
+    <a href="./1일차/ex01-07.html">예제7</a><br />
+    <a href="./1일차/ex01-08.html">예제8</a><br />
+    <a href="./1일차/ex01-09.html">예제9</a><br />
+    <a href="./1일차/과제.html">과제</a><br />
 
     <h2 style="background-color: olive">2일차</h2>
-    <a href="ex02-01.html">예제1</a>
+    <a href="ex02-01.html">a1</a>
   </body>
 </html>
