--- a/1일차/ex01-01.html
+++ b/1일차/ex01-01.html
@@ -6,7 +6,7 @@
     <title>내웹브라우져</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
     <h1>h1 태그</h1>
     <h2>h2 태그</h2>
     <h2>h2 태그</h2>
