--- a/1일차/ex01-05.html
+++ b/1일차/ex01-05.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
     <div>div로 작성된 글</div>
     <span>span으로 작성된 글</span> <br />
     일반 글자 <br />
