--- a/1일차/ex01-08.html
+++ b/1일차/ex01-08.html
@@ -6,7 +6,7 @@
     <title>시맨틱 레이아웃</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
     <header style="background-color: beige">header영역</header>
     <nav style="background-color: deepskyblue">nav영역</nav>
     <main style="background-color: pink">
