--- a/1일차/ex01-03.html
+++ b/1일차/ex01-03.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
     동해물과 백두산이 <br />
     마르고 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;닳도록 <br />
     &lt;하느님&gt;이 보우하사 <br />
