--- a/1일차/ex01-06.html
+++ b/1일차/ex01-06.html
@@ -6,7 +6,7 @@
     <title>링크</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
     <h1>문서 내 링크하기</h1>
     <hr />
     <a href="#content">본문으로 이동</a> |
