--- a/1일차/ex01-09.html
+++ b/1일차/ex01-09.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
     First name : <input type="text" /> <br />
     Last name : <input type="text" /><br />
     Age : <input type="number" min="12" max="15" step="1" value="15" /> <br />
