--- a/1일차/ex01-07.html
+++ b/1일차/ex01-07.html
@@ -28,7 +28,7 @@
     </style>
 
     <video id="catvideo1" autoplay muted loop>
-      <source src="img\cat.mp4" type="video/mp4" />
+      <source src="..\img\cat.mp4" type="video/mp4" />
     </video>
 
     <script>
