--- a/2일차/a1.html
+++ b/2일차/a1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="index.html">홈으로</a><br />
+    <a href="../index.html">홈으로</a><br />
 
     <h1>레드향</h1>
     <p>껍질에 붉은빛이 돌아 <b>레드향</b>이라 불린다.</p>
