--- a/2일차/ex02-01.html
+++ b/2일차/ex02-01.html
@@ -38,7 +38,14 @@
         <input type="datetime-local" name="" id="" id="input-datetime" /><br />
         <label for="upload">업로드</label>
         <input type="file" id="upload" /> <br />
-        (숨김): <input type="hidden" name="외모" value="귀여움" />
+        <input type="search" /> <br />
+        <input type="email" /> <br />
+        <input type="color" /> <br />
+        수량1: <input type="number" min="6" max="12" /> <br />
+        수량2:<input type="number" min="0" max="20" value="0" step="5" /><br />
+        Range1: <input type="range" min="6" max="12" /> <br />
+
+        (숨김):<input type="hidden" name="외모" value="귀여움" />
 
         <hr />
         <input type="submit" value="전송" />
