--- a/index.html
+++ b/index.html
@@ -4,43 +4,106 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      table {
+        border-collapse: collapse;
+        background-color: beige;
+        width: 100%;
+        height: 100%;
+      }
+      th,
+      td {
+        vertical-align: top;
+        border: 1px solid #5b1fff;
+      }
+      [name="sub"] {
+        background-color: lawngreen;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h1 style="background-color: lightgreen">HTML 실습</h1>
-    <h2 style="background-color: olive">1일차</h2>
-    <select name="path" id="dropdown" style="width: 200px; height: 100px">
-      <option value="./1일차/ex01-01.html">예제1</option>
-      <option value="./1일차/ex01-02.html">예제2</option>
-      <option value="./1일차/ex01-03.html">예제3</option>
-      <option value="./1일차/ex01-04.html">예제4</option>
-      <option value="./1일차/ex01-05.html">예제5</option>
-      <option value="./1일차/ex01-06.html">예제6</option>
-      <option value="./1일차/ex01-07.html">예제7</option>
-      <option value="./1일차/ex01-08.html">예제8</option>
-      <option value="./1일차/ex01-09.html">예제9</option>
-      <option value="./1일차/과제.html">과제</option>
-    </select>
-
-    <form onsubmit="navigatePage(event)">
-      <input type="submit" style="width: 100px; height: 50px" />
-    </form>
-    <hr />
-
-    <h2 style="background-color: olive">2일차</h2>
-    <a href="./2일차/a1.html">a1</a><br />
-    <a href="./2일차/a2.html">a2</a> <br />
-    <a href="./2일차/ex02-01.html">예제1</a><br />
-    <a href="./2일차/ex02-02.html">예제2</a><br />
-    <a href="./2일차/ex02-03.html">예제3</a><br />
-    <a href="./2일차/ex02-04.html">예제4</a> <br />
-    <a href="./2일차/ex02-05.html">예제5</a> <br />
-    <a href="./2일차/ex02-06.html">예제6</a> <br />
-    <a href="./2일차/ex02-07.html">예제7</a> <br />
-    <a href="./2일차/ex02-08.html">예제8</a> <br />
-    <a href="./2일차/ex02-09.html">예제9</a> <br />
-    <a href="./2일차/list.html">리스트연습</a> <br />
-    <a href="./2일차/RCP.html">테이블연습</a>
-    <hr />
+    <table>
+      <colgroup>
+        <col style="width: 25%" />
+        <col style="width: 25%" />
+        <col style="width: 25%" />
+      </colgroup>
+      <thead style="height: 30%">
+        <tr>
+          <th
+            colspan="4"
+            style="background-color: lightgreen; text-align: center"
+          >
+            <h1>HTML 실습</h1>
+          </th>
+        </tr>
+      </thead>
+      <tbody style="height: 70%">
+        <tr>
+          <td>
+            <h2 name="sub">1일차</h2>
+            <select
+              name="path"
+              id="dropdown"
+              style="width: 200px; height: 100px"
+            >
+              <option value="./1일차/ex01-01.html">예제1</option>
+              <option value="./1일차/ex01-02.html">예제2</option>
+              <option value="./1일차/ex01-03.html">예제3</option>
+              <option value="./1일차/ex01-04.html">예제4</option>
+              <option value="./1일차/ex01-05.html">예제5</option>
+              <option value="./1일차/ex01-06.html">예제6</option>
+              <option value="./1일차/ex01-07.html">예제7</option>
+              <option value="./1일차/ex01-08.html">예제8</option>
+              <option value="./1일차/ex01-09.html">예제9</option>
+              <option value="./1일차/과제.html">과제</option>
+            </select>
+            <form onsubmit="navigatePage(event)">
+              <input
+                type="submit"
+                style="width: 100px; height: 50px"
+                value="들어아기"
+              />
+            </form>
+          </td>
+          <td>
+            <h2 name="sub">2일차</h2>
+            <a href="./2일차/a1.html">a1</a><br />
+            <a href="./2일차/a2.html">a2</a> <br />
+            <a href="./2일차/ex02-01.html">예제1</a><br />
+            <a href="./2일차/ex02-02.html">예제2</a><br />
+            <a href="./2일차/ex02-03.html">예제3</a><br />
+            <a href="./2일차/ex02-04.html">예제4</a> <br />
+            <a href="./2일차/ex02-05.html">예제5</a> <br />
+            <a href="./2일차/ex02-06.html">예제6</a> <br />
+            <a href="./2일차/ex02-07.html">예제7</a> <br />
+            <a href="./2일차/ex02-08.html">예제8</a> <br />
+            <a href="./2일차/ex02-09.html">예제9</a> <br />
+            <a href="./2일차/list.html">리스트연습</a> <br />
+            <a href="./2일차/RCP.html">테이블연습</a>
+          </td>
+          <td>
+            <h2 name="sub">3일차</h2>
+            <a href="./3일차/ex03-01.html">예제1</a><br />
+            <a href="./3일차/ex03-01a.html">예제1a</a> <br />
+            <a href="./3일차/ex03-02.html">예제2</a><br />
+            <a href="./3일차/ex03-03.html">예제3</a><br />
+            <a href="./3일차/ex03-04.html">예제4</a> <br />
+            <a href="./3일차/ex03-05.html">예제5</a> <br />
+          </td>
+          <td>
+            <h2 name="sub">4일차</h2>
+          </td>
+        </tr>
+        <tr>
+          <td><h2 name="sub">5일차</h2></td>
+          <td><h2 name="sub">6일차</h2></td>
+          <td><h2 name="sub">7일차</h2></td>
+          <td><h2 name="sub">8일차</h2></td>
+        </tr>
+      </tbody>
+    </table>
 
     <script>
       function navigatePage(event) {
