--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <input
                 type="submit"
                 style="width: 100px; height: 50px"
-                value="들어아기"
+                value="들어가기"
               />
             </form>
           </td>
@@ -94,10 +94,26 @@
           </td>
           <td>
             <h2 name="sub">4일차</h2>
+            <a href="./4일차/ex04-01.html">예제1</a><br />
+            <a href="./4일차/ex04-02.html">예제2</a> <br />
+            <a href="./4일차/ex04-03.html">예제3</a> <br />
+            <a href="./4일차/ex04-04.html">예제4</a> <br />
+            <a href="./4일차/ex04-05.html">예제5</a> <br />
+            <a href="./4일차/ex04-06.html">예제6</a> <br />
+            <a href="./4일차/ex04-06a.html">예제6a</a> <br />
+            <a href="./4일차/ex04-06b.html">예제6b</a> <br />
+            <a href="./4일차/ex04-06c.html">예제6c</a> <br />
+            <a href="./4일차/ex04-07.html">예제7</a> <br />
+            <a href="./4일차/ex04-08.html">예제8</a> <br />
+            <a href="./4일차/ex04-09.html">예제9</a> <br />
+            <a href="./4일차/ex04-10.html">예제10</a> <br />
           </td>
         </tr>
         <tr>
-          <td><h2 name="sub">5일차</h2></td>
+          <td>
+            <h2 name="sub">5일차</h2>
+            <a href="./5일차/ex05-01.html">예제1</a>
+          </td>
           <td><h2 name="sub">6일차</h2></td>
           <td><h2 name="sub">7일차</h2></td>
           <td><h2 name="sub">8일차</h2></td>
