--- a/1일차/과제.html
+++ b/1일차/과제.html
@@ -36,7 +36,7 @@
     </a>
     <a href="https://v.daum.net/v/4w9H9A1iwv">
       <video id="catvideo" autoplay muted loop width="300" height="300">
-        <source src="img\cat.mp4" type="video/mp4" />
+        <source src="../img/cat.mp4" type="video/mp4" />
       </video>
     </a>
 
