--- a/index.html
+++ b/index.html
@@ -16,68 +16,71 @@
         vertical-align: top;
         border: 1px solid #5b1fff;
         height: 10px;
+        text-size-adjust: ;
       }
       [name="sub"] {
         background-color: lawngreen;
         text-align: center;
-      }
-      .table-wrapper {
-        max-height: 600px;
-        overflow: auto;
-      }
-      thead {
         position: sticky;
         top: 0;
+        margin: 0;
+      }
+      .table-wrapper {
+        max-height: 300px;
+        overflow: auto;
+      }
+      a {
+        text-decoration: none;
       }
     </style>
   </head>
   <body>
-    <div class="table-wrapper">
-      <table>
-        <colgroup>
-          <col style="width: 25%" />
-          <col style="width: 25%" />
-          <col style="width: 25%" />
-        </colgroup>
-        <thead>
-          <tr>
-            <th
-              colspan="4"
-              style="background-color: lightgreen; text-align: center"
+    <table>
+      <colgroup>
+        <col style="width: 25%" />
+        <col style="width: 25%" />
+        <col style="width: 25%" />
+      </colgroup>
+      <thead>
+        <tr>
+          <th
+            colspan="4"
+            style="background-color: lightgreen; text-align: center"
+          >
+            <h1>HTML 실습</h1>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <h2 name="sub">1일차</h2>
+            <select
+              name="path"
+              id="dropdown"
+              style="width: 200px; height: 100px"
             >
-              <h1>HTML 실습</h1>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <h2 name="sub">1일차</h2>
-              <select
-                name="path"
-                id="dropdown"
-                style="width: 200px; height: 100px"
-              >
-                <option value="./1일차/ex01-01.html">예제1</option>
-                <option value="./1일차/ex01-02.html">예제2</option>
-                <option value="./1일차/ex01-03.html">예제3</option>
-                <option value="./1일차/ex01-04.html">예제4</option>
-                <option value="./1일차/ex01-05.html">예제5</option>
-                <option value="./1일차/ex01-06.html">예제6</option>
-                <option value="./1일차/ex01-07.html">예제7</option>
-                <option value="./1일차/ex01-08.html">예제8</option>
-                <option value="./1일차/ex01-09.html">예제9</option>
-                <option value="./1일차/과제.html">과제</option>
-              </select>
-              <form onsubmit="navigatePage(event)">
-                <input
-                  type="submit"
-                  style="width: 100px; height: 50px"
-                  value="들어가기"
-                />
-              </form>
-            </td>
-            <td>
+              <option value="./1일차/ex01-01.html">예제1</option>
+              <option value="./1일차/ex01-02.html">예제2</option>
+              <option value="./1일차/ex01-03.html">예제3</option>
+              <option value="./1일차/ex01-04.html">예제4</option>
+              <option value="./1일차/ex01-05.html">예제5</option>
+              <option value="./1일차/ex01-06.html">예제6</option>
+              <option value="./1일차/ex01-07.html">예제7</option>
+              <option value="./1일차/ex01-08.html">예제8</option>
+              <option value="./1일차/ex01-09.html">예제9</option>
+              <option value="./1일차/과제.html">과제</option>
+            </select>
+            <form onsubmit="navigatePage(event)">
+              <input
+                type="submit"
+                style="width: 100px; height: 50px"
+                value="들어가기"
+              />
+            </form>
+          </td>
+          <td>
+            <div class="table-wrapper">
               <h2 name="sub">2일차</h2>
               <a href="./2일차/a1.html">a1</a><br />
               <a href="./2일차/a2.html">a2</a> <br />
@@ -92,8 +95,10 @@
               <a href="./2일차/ex02-09.html">예제9</a> <br />
               <a href="./2일차/list.html">리스트연습</a> <br />
               <a href="./2일차/RCP.html">테이블연습</a>
-            </td>
-            <td>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
               <h2 name="sub">3일차</h2>
               <a href="./3일차/ex03-01.html">예제1</a><br />
               <a href="./3일차/ex03-01a.html">예제1a</a> <br />
@@ -101,8 +106,10 @@
               <a href="./3일차/ex03-03.html">예제3</a><br />
               <a href="./3일차/ex03-04.html">예제4</a> <br />
               <a href="./3일차/ex03-05.html">예제5</a> <br />
-            </td>
-            <td>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
               <h2 name="sub">4일차</h2>
               <a href="./4일차/ex04-01.html">예제1</a><br />
               <a href="./4일차/ex04-02.html">예제2</a> <br />
@@ -117,40 +124,85 @@
               <a href="./4일차/ex04-08.html">예제8</a> <br />
               <a href="./4일차/ex04-09.html">예제9</a> <br />
               <a href="./4일차/ex04-10.html">예제10</a> <br />
-            </td>
-          </tr>
-          <tr>
-            <td class="table-wrapper">
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="table-wrapper">
               <h2 name="sub">5일차</h2>
-              <a href="./5일차/ex05-01.html">예제1</a><br />
-              <a href="./5일차/ex05-02.html">예제2</a> <br />
-              <a href="./5일차/ex05-03.html">예제3</a> <br />
-              <a href="./5일차/ex05-04.html">예제4</a> <br />
-              <a href="./5일차/ex05-05.html">예제5</a> <br />
-              <a href="./5일차/ex05-06.html">예제6</a> <br />
-              <a href="./5일차/ex05-07.html">예제7</a> <br />
-              <a href="./5일차/ex05-08.html">예제8</a> <br />
-              <a href="./5일차/ex05-08a.html">예제8a</a> <br />
-              <a href="./5일차/ex05-09.html">예제9</a> <br />
-              <a href="./5일차/ex05-09a.html">예제9a</a> <br />
-              <a href="./5일차/ex05-09b.html">예제9b</a> <br />
-              <a href="./5일차/ex05-10.html">예제10</a> <br />
-              <a href="./5일차/ex05-10a.html">예제10a</a> <br />
-              <a href="./5일차/ex05-10b.html">예제10b</a> <br />
-              <a href="./5일차/ex05-11.html">예제11</a> <br />
-              <a href="./5일차/ex05-11a.html">예제11a</a> <br />
-              <a href="./5일차/ex05-12.html">예제12</a> <br />
-              <a href="./5일차/ex05-13.html">예제13</a> <br />
-              <a href="./5일차/ex05-13a.html">예제13a</a> <br />
-              <a href="./5일차/ex05-14.html">예제14</a> <br />
-            </td>
-            <td><h2 name="sub">6일차</h2></td>
-            <td><h2 name="sub">7일차</h2></td>
-            <td><h2 name="sub">8일차</h2></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+              <a href="./5일차/ex05-01.html">1. font-style</a><br />
+              <a href="./5일차/ex05-02.html"
+                >2. 아이콘(https://fontawesome.com)</a
+              >
+              <br />
+              <a href="./5일차/ex05-03.html">3. 글 정렬 설정</a> <br />
+              <a href="./5일차/ex05-04.html">4. 줄 높이 설정</a> <br />
+              <a href="./5일차/ex05-05.html">5. padding</a> <br />
+              <a href="./5일차/ex05-06.html">6. text-decoration</a> <br />
+              <a href="./5일차/ex05-07.html">7. text-shadow</a> <br />
+              <a href="./5일차/ex05-08.html">8. box-shadow</a> <br />
+              <a href="./5일차/ex05-08a.html">9. 예제8a</a> <br />
+              <a href="./5일차/ex05-09.html">10. 예제9</a> <br />
+              <a href="./5일차/ex05-09a.html">11. 예제9a</a> <br />
+              <a href="./5일차/ex05-09b.html">12.예제9b</a> <br />
+              <a href="./5일차/ex05-10.html">13. border-radius</a> <br />
+              <a href="./5일차/ex05-10a.html">14. 예제10a</a> <br />
+              <a href="./5일차/ex05-10b.html">15. 예제10b</a> <br />
+              <a href="./5일차/ex05-11.html">16. background-image위 글자</a>
+              <br />
+              <a href="./5일차/ex05-11a.html">17. 예제11a</a> <br />
+              <a href="./5일차/ex05-12.html">18. none,hidden차이</a> <br />
+              <a href="./5일차/ex05-13.html">19. 이미지 글자 어울림 배치</a>
+              <br />
+              <a href="./5일차/ex05-13a.html">20. 예제13a</a> <br />
+              <a href="./5일차/ex05-14.html">21. table-wrapper</a> <br />
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">6일차</h2>
+              <a href="./6일차/ex06-01.html">1. background-clip</a> <br />
+              <a href="./6일차/ex06-02.html">2. body background-image</a> <br />
+              <a href="./6일차/ex06-02a.html">3. 예제2a</a> <br />
+              <a href="./6일차/ex06-02b.html">4. 예제2b</a> <br />
+              <a href="./6일차/ex06-03.html">5. 이미지 background-image</a>
+              <br />
+              <a href="./6일차/ex06-04.html">6. 이미지 background-size</a>
+              <br />
+              <a href="./6일차/ex06-04a.html">7. 이미지 위치조정,:root</a>
+              <br />
+              <a href="./6일차/ex06-05.html">8. box-sizing</a> <br />
+              <a href="./6일차/ex06-06.html">9. 그라데이션 </a> <br />
+              <a href="./6일차/ex06-07.html"
+                >10. 구조적가상클래스(first-child,first-of-type)
+              </a>
+              <br />
+              <a href="./6일차/ex06-08.html">11. nth-child, nth-of-type</a>
+              <br />
+              <a href="./6일차/ex06-09.html">12. 가상요소선택자</a> <br />
+              <a href="./6일차/ex06-09a.html">13. script완전기초</a> <br />
+              <br />
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">7일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">8일차</h2>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>
+      <a style="text-decoration: none" href="https://www.pknu.ac.kr/main/399">
+        <button>밥보러가기</button>
+      </a>
+    </h2>
 
     <script>
       function navigatePage(event) {
