--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       a {
         text-decoration: none;
       }
+      .bob {
+        width: 300px;
+        height: 100px;
+      }
     </style>
   </head>
   <body>
@@ -188,6 +192,12 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">7일차</h2>
+              <a href="./7일차/ex07-01.html">달력제작</a> <br />
+              <a href="./7일차/ex07-01a.html">달력제작a</a> <br />
+              <a href="./7일차/ex07-02.html">예제2</a> <br />
+              <a href="./7일차/ex07-03.html">화면크기별 배경변경</a> <br />
+              <a href="./7일차/ex07-04.html">object-fit속성</a> <br />
+              <a href="./7일차/ex07-05.html">예제5</a> <br />
             </div>
           </td>
           <td>
@@ -199,10 +209,13 @@
       </tbody>
     </table>
     <h2>
-      <a style="text-decoration: none" href="https://www.pknu.ac.kr/main/399">
-        <button>밥보러가기</button>
+      <a href="https://www.pknu.ac.kr/main/399">
+        <button class="bob"><h1>밥보러가기</h1></button>
       </a>
     </h2>
+    <form action="./python.py" method="post">
+      <button type="submit">Python 실행</button>
+    </form>
 
     <script>
       function navigatePage(event) {
