--- a/index.html
+++ b/index.html
@@ -203,6 +203,21 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">8일차</h2>
+              <a href="./8일차/ex08-01.html">구글form연동</a> <br />
+              <a href="./8일차/ex08-02.html">tranform1</a> <br />
+              <a href="./8일차/ex08-03.html">tranform2</a> <br />
+              <a href="./8일차/ex08-03a.html">tranform2a</a> <br />
+              <a href="./8일차/ex08-04.html">tranform3</a> <br />
+              <a href="./8일차/ex08-05.html">tranform4</a> <br />
+              <a href="./8일차/ex08-05.html">tranform5</a> <br />
+              <a href="./8일차/ex08-06.html">tranform6</a> <br />
+              <a href="./8일차/ex08-07.html">tranform7</a> <br />
+              <a href="./8일차/ex08-circle.html">공 연습</a> <br />
+              <a href="./8일차/ex08-07b.html">예제7b</a> <br />
+              <a href="./8일차/ex08-08.html">예제8</a> <br />
+              <a href="./8일차/ex08-09.html">예제9</a> <br />
+              <a href="./8일차/ex08-10.html">예제10</a> <br />
+              <a href="./8일차/ex08-11.html">예제11</a> <br />
             </div>
           </td>
         </tr>
