--- a/8일차/ex08-11.html
+++ b/8일차/ex08-11.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
       body {
-        background: linear-gradient(to right, #ff0000, #ff7300);
+        background: linear-gradient(to right, #ff0000, #ff8b2c);
         display: flex;
         justify-content: center;
         align-items: center;
