--- a/index.html
+++ b/index.html
@@ -214,11 +214,39 @@
               <a href="./8일차/ex08-07.html">tranform7</a> <br />
               <a href="./8일차/ex08-circle.html">공 연습</a> <br />
               <a href="./8일차/ex08-07b.html">예제7b</a> <br />
-              <a href="./8일차/ex08-08.html">예제8</a> <br />
-              <a href="./8일차/ex08-09.html">예제9</a> <br />
-              <a href="./8일차/ex08-10.html">예제10</a> <br />
-              <a href="./8일차/ex08-11.html">예제11</a> <br />
+              <a href="./8일차/ex08-08.html">flex1</a> <br />
+              <a href="./8일차/ex08-09.html">flex2</a> <br />
+              <a href="./8일차/ex08-10.html">flex3</a> <br />
+              <a href="./8일차/ex08-11.html">버튼꾸미기 연습 </a> <br />
             </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <h2 name="sub">9일차</h2>
+            <a href="./9일차/ex09-01.html">예제1</a><br />
+            <a href="./9일차/ex09-02.html">예제2</a><br />
+            <a href="./9일차/ex09-03.html">예제3</a><br />
+            <a href="./9일차/ex09-04.html">bootstrap</a><br />
+            <a href="./9일차/ex09-04a.html">예제4a</a><br />
+            <a href="./9일차/ex09-05.html">bootstrap아코디언</a><br />
+            <a href="./9일차/ex09-06.html">예제6</a><br />
+            <a href="./9일차/ex09-07.html">예제7</a><br />
+            <a href="./9일차/ex09-08.html">예제8</a><br />
+            <a href="./9일차/ex09-08a.html">예제8a</a><br />
+            <a href="./9일차/ex09-09.html">예제9</a><br />
+          </td>
+          <td>
+            <h2 name="sub">10일차</h2>
+            <a href=""></a>
+          </td>
+          <td>
+            <h2 name="sub">11일차</h2>
+            <a href=""></a>
+          </td>
+          <td>
+            <h2 name="sub">12일차</h2>
+            <a href=""></a>
           </td>
         </tr>
       </tbody>
