--- a/index.html
+++ b/index.html
@@ -235,10 +235,23 @@
             <a href="./9일차/ex09-08.html">예제8</a><br />
             <a href="./9일차/ex09-08a.html">예제8a</a><br />
             <a href="./9일차/ex09-09.html">예제9</a><br />
+            <a href="./9일차/ex09-10.html">예제10</a><br />
           </td>
           <td>
             <h2 name="sub">10일차</h2>
-            <a href=""></a>
+            <a href="./10일차/ex10-01.html">예제1</a> <br />
+            <a href="./10일차/ex10-02.html">예제2</a> <br />
+            <a href="./10일차/ex10-03.html">예제3</a> <br />
+            <a href="./10일차/ex10-04.html">예제4</a> <br />
+            <a href="./10일차/ex10-05.html">flex-basis </a> <br />
+            <a href="./10일차/ex10-05b.html">flex-grow </a> <br />
+            <a href="./10일차/ex10-05c.html">flex-shrink </a> <br />
+            <a href="./10일차/ex10-06.html">flex 비교</a> <br />
+            <a href="./10일차/ex10-06a.html">flex 비교2</a> <br />
+            <a href="./10일차/ex10-07.html">예제7</a> <br />
+            <a href="./10일차/ex10-08.html">예제8</a> <br />
+            <a href="./10일차/ex10-09.html">Grid 레이아웃</a> <br />
+            <a href="./10일차/ex10-09a.html">Grid 레이아웃2</a> <br />
           </td>
           <td>
             <h2 name="sub">11일차</h2>
