--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
       th,
       td {
         vertical-align: top;
-        border: 1px solid #5b1fff;
+        border: 1px solid #ccc;
         height: 10px;
-        text-size-adjust: ;
       }
       [name="sub"] {
         background-color: lawngreen;
@@ -44,11 +43,12 @@
         <col style="width: 25%" />
         <col style="width: 25%" />
         <col style="width: 25%" />
+        <col style="width: 25%" />
       </colgroup>
       <thead>
         <tr>
           <th
-            colspan="4"
+            colspan="5"
             style="background-color: lightgreen; text-align: center"
           >
             <h1>HTML 실습</h1>
@@ -130,8 +130,6 @@
               <a href="./4일차/ex04-10.html">예제10</a> <br />
             </div>
           </td>
-        </tr>
-        <tr>
           <td>
             <div class="table-wrapper">
               <h2 name="sub">5일차</h2>
@@ -163,6 +161,9 @@
               <a href="./5일차/ex05-14.html">21. table-wrapper</a> <br />
             </div>
           </td>
+        </tr>
+
+        <tr>
           <td>
             <div class="table-wrapper">
               <h2 name="sub">6일차</h2>
@@ -220,8 +221,6 @@
               <a href="./8일차/ex08-11.html">버튼꾸미기 연습 </a> <br />
             </div>
           </td>
-        </tr>
-        <tr>
           <td>
             <h2 name="sub">9일차</h2>
             <a href="./9일차/ex09-01.html">예제1</a><br />
@@ -253,12 +252,46 @@
             <a href="./10일차/ex10-09.html">Grid 레이아웃</a> <br />
             <a href="./10일차/ex10-09a.html">Grid 레이아웃2</a> <br />
           </td>
+        </tr>
+        <tr>
+          <th
+            colspan="5"
+            style="background-color: rgb(1, 117, 1); text-align: center"
+          >
+            <h1 style="color: white">JavaScript 실습</h1>
+          </th>
+        </tr>
+        <tr>
           <td>
             <h2 name="sub">11일차</h2>
-            <a href=""></a>
+            <a href="./11일차/ex11-01.html">console 기본</a><br />
+            <a href="./11일차/ex11-02.html">console 기본2</a><br />
+            <a href="./11일차/ex11-02a.html">console 연산</a><br />
+            <a href="./11일차/ex11-03.html">console 기본3</a><br />
+            <a href="./11일차/ex11-03a.html">console기본3a</a><br />
+            <a href="./11일차/ex11-04.html">console(true,false)</a><br />
+            <a href="./11일차/ex11-04a.html">논리곱연산</a><br />
+            <a href="./11일차/ex11-05.html">cofirm</a><br />
+            <a href="./11일차/ex11-05a.html">prompt</a><br />
+            <a href="./11일차/ex11-05b.html">prompt연습</a><br />
+            <a href="./11일차/ex11-06.html">const${}</a><br />
+            <a href="./11일차/ex11-06a.html">구구단 연습 </a><br />
+            <a href="./11일차/ex11-06b.html">javascript표 연습 </a><br />
           </td>
           <td>
             <h2 name="sub">12일차</h2>
+            <a href=""></a>
+          </td>
+          <td>
+            <h2 name="sub">13일차</h2>
+            <a href=""></a>
+          </td>
+          <td>
+            <h2 name="sub">14일차</h2>
+            <a href=""></a>
+          </td>
+          <td>
+            <h2 name="sub">15일차</h2>
             <a href=""></a>
           </td>
         </tr>
