--- a/index.html
+++ b/index.html
@@ -280,7 +280,20 @@
           </td>
           <td>
             <h2 name="sub">12일차</h2>
-            <a href=""></a>
+            <a href="./12일차/ex12-01.html">예제1</a><br />
+            <a href="./12일차/ex12-02.html">예제2</a><br />
+            <a href="./12일차/ex12-02a.html">if문</a><br />
+            <a href="./12일차/ex12-03.html">증감연산자</a><br />
+            <a href="./12일차/ex12-03a.html">예제3a</a><br />
+            <a href="./12일차/ex12-04.html">js파일사용</a><br />
+            <a href="./12일차/ex12-05.html">예제5</a><br />
+            <a href="./12일차/ex12-05a.html">예제5a</a><br />
+            <a href="./12일차/ex12-06.html">document</a><br />
+            <a href="./12일차/ex12-06a.html">document2</a><br />
+            <a href="./12일차/ex12-06b.html">document3</a><br />
+            <a href="./12일차/ex12-07.html">중첩조건문 </a><br />
+            <a href="./12일차/ex12-08.html">연습문제 </a><br />
+            <a href="./12일차/ex12-test.html">CSS연습문제</a><br />
           </td>
           <td>
             <h2 name="sub">13일차</h2>
