13일 커밋 마무리

--- a/index.html
+++ b/index.html
@@ -293,11 +293,20 @@
             <a href="./12일차/ex12-06b.html">document3</a><br />
             <a href="./12일차/ex12-07.html">중첩조건문 </a><br />
             <a href="./12일차/ex12-08.html">연습문제 </a><br />
+            <a href="./12일차/ex12-08a.html">연습문제 보충 </a><br />
             <a href="./12일차/ex12-test.html">CSS연습문제</a><br />
           </td>
           <td>
             <h2 name="sub">13일차</h2>
-            <a href=""></a>
+            <a href="./13일차/ex13-01.html">Date추출</a><br />
+            <a href="./13일차/ex13-01a.html">Date추출(jsdelvr)</a><br />
+            <a href="./13일차/ex13-01b.html">Date추출2(jsdelvr)</a><br />
+            <a href="./13일차/ex13-01c.html">Date추출3(jsdelvr)</a><br />
+            <a href="./13일차/ex13-02.html">예제2</a><br />
+            <a href="./13일차/ex13-03.html">예제3</a><br />
+            <a href="./13일차/ex13-03a.html">for문</a><br />
+            <a href="./13일차/ex13-03b.html">for문 구구단</a><br />
+            <a href="./13일차/ex13-04.html">자리배치도연습</a><br />
           </td>
           <td>
             <h2 name="sub">14일차</h2>
