--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
   <body>
     <table>
       <colgroup>
-        <col style="width: 25%" />
-        <col style="width: 25%" />
-        <col style="width: 25%" />
-        <col style="width: 25%" />
+        <col style="width: 20%" />
+        <col style="width: 20%" />
+        <col style="width: 20%" />
+        <col style="width: 20%" />
+        <col style="width: 20%" />
       </colgroup>
       <thead>
         <tr>
@@ -58,30 +59,32 @@
       <tbody>
         <tr>
           <td>
-            <h2 name="sub">1일차</h2>
-            <select
-              name="path"
-              id="dropdown"
-              style="width: 200px; height: 100px"
-            >
-              <option value="./1일차/ex01-01.html">예제1</option>
-              <option value="./1일차/ex01-02.html">예제2</option>
-              <option value="./1일차/ex01-03.html">예제3</option>
-              <option value="./1일차/ex01-04.html">예제4</option>
-              <option value="./1일차/ex01-05.html">예제5</option>
-              <option value="./1일차/ex01-06.html">예제6</option>
-              <option value="./1일차/ex01-07.html">예제7</option>
-              <option value="./1일차/ex01-08.html">예제8</option>
-              <option value="./1일차/ex01-09.html">예제9</option>
-              <option value="./1일차/과제.html">과제</option>
-            </select>
-            <form onsubmit="navigatePage(event)">
-              <input
-                type="submit"
-                style="width: 100px; height: 50px"
-                value="들어가기"
-              />
-            </form>
+            <div class="table-wrapper">
+              <h2 name="sub">1일차</h2>
+              <select
+                name="path"
+                id="dropdown"
+                style="width: 200px; height: 100px"
+              >
+                <option value="./1일차/ex01-01.html">예제1</option>
+                <option value="./1일차/ex01-02.html">예제2</option>
+                <option value="./1일차/ex01-03.html">예제3</option>
+                <option value="./1일차/ex01-04.html">예제4</option>
+                <option value="./1일차/ex01-05.html">예제5</option>
+                <option value="./1일차/ex01-06.html">예제6</option>
+                <option value="./1일차/ex01-07.html">예제7</option>
+                <option value="./1일차/ex01-08.html">예제8</option>
+                <option value="./1일차/ex01-09.html">예제9</option>
+                <option value="./1일차/과제.html">과제</option>
+              </select>
+              <form onsubmit="navigatePage(event)">
+                <input
+                  type="submit"
+                  style="width: 100px; height: 50px"
+                  value="들어가기"
+                />
+              </form>
+            </div>
           </td>
           <td>
             <div class="table-wrapper">
@@ -222,35 +225,39 @@
             </div>
           </td>
           <td>
-            <h2 name="sub">9일차</h2>
-            <a href="./9일차/ex09-01.html">예제1</a><br />
-            <a href="./9일차/ex09-02.html">예제2</a><br />
-            <a href="./9일차/ex09-03.html">예제3</a><br />
-            <a href="./9일차/ex09-04.html">bootstrap</a><br />
-            <a href="./9일차/ex09-04a.html">예제4a</a><br />
-            <a href="./9일차/ex09-05.html">bootstrap아코디언</a><br />
-            <a href="./9일차/ex09-06.html">예제6</a><br />
-            <a href="./9일차/ex09-07.html">예제7</a><br />
-            <a href="./9일차/ex09-08.html">예제8</a><br />
-            <a href="./9일차/ex09-08a.html">예제8a</a><br />
-            <a href="./9일차/ex09-09.html">예제9</a><br />
-            <a href="./9일차/ex09-10.html">예제10</a><br />
+            <div class="table-wrapper">
+              <h2 name="sub">9일차</h2>
+              <a href="./9일차/ex09-01.html">예제1</a><br />
+              <a href="./9일차/ex09-02.html">예제2</a><br />
+              <a href="./9일차/ex09-03.html">예제3</a><br />
+              <a href="./9일차/ex09-04.html">bootstrap</a><br />
+              <a href="./9일차/ex09-04a.html">예제4a</a><br />
+              <a href="./9일차/ex09-05.html">bootstrap아코디언</a><br />
+              <a href="./9일차/ex09-06.html">예제6</a><br />
+              <a href="./9일차/ex09-07.html">예제7</a><br />
+              <a href="./9일차/ex09-08.html">예제8</a><br />
+              <a href="./9일차/ex09-08a.html">예제8a</a><br />
+              <a href="./9일차/ex09-09.html">예제9</a><br />
+              <a href="./9일차/ex09-10.html">예제10</a><br />
+            </div>
           </td>
           <td>
-            <h2 name="sub">10일차</h2>
-            <a href="./10일차/ex10-01.html">예제1</a> <br />
-            <a href="./10일차/ex10-02.html">예제2</a> <br />
-            <a href="./10일차/ex10-03.html">예제3</a> <br />
-            <a href="./10일차/ex10-04.html">예제4</a> <br />
-            <a href="./10일차/ex10-05.html">flex-basis </a> <br />
-            <a href="./10일차/ex10-05b.html">flex-grow </a> <br />
-            <a href="./10일차/ex10-05c.html">flex-shrink </a> <br />
-            <a href="./10일차/ex10-06.html">flex 비교</a> <br />
-            <a href="./10일차/ex10-06a.html">flex 비교2</a> <br />
-            <a href="./10일차/ex10-07.html">예제7</a> <br />
-            <a href="./10일차/ex10-08.html">예제8</a> <br />
-            <a href="./10일차/ex10-09.html">Grid 레이아웃</a> <br />
-            <a href="./10일차/ex10-09a.html">Grid 레이아웃2</a> <br />
+            <div class="table-wrapper">
+              <h2 name="sub">10일차</h2>
+              <a href="./10일차/ex10-01.html">예제1</a> <br />
+              <a href="./10일차/ex10-02.html">예제2</a> <br />
+              <a href="./10일차/ex10-03.html">예제3</a> <br />
+              <a href="./10일차/ex10-04.html">예제4</a> <br />
+              <a href="./10일차/ex10-05.html">flex-basis </a> <br />
+              <a href="./10일차/ex10-05b.html">flex-grow </a> <br />
+              <a href="./10일차/ex10-05c.html">flex-shrink </a> <br />
+              <a href="./10일차/ex10-06.html">flex 비교</a> <br />
+              <a href="./10일차/ex10-06a.html">flex 비교2</a> <br />
+              <a href="./10일차/ex10-07.html">예제7</a> <br />
+              <a href="./10일차/ex10-08.html">예제8</a> <br />
+              <a href="./10일차/ex10-09.html">Grid 레이아웃</a> <br />
+              <a href="./10일차/ex10-09a.html">Grid 레이아웃2</a> <br />
+            </div>
           </td>
         </tr>
         <tr>
@@ -263,58 +270,84 @@
         </tr>
         <tr>
           <td>
-            <h2 name="sub">11일차</h2>
-            <a href="./11일차/ex11-01.html">console 기본</a><br />
-            <a href="./11일차/ex11-02.html">console 기본2</a><br />
-            <a href="./11일차/ex11-02a.html">console 연산</a><br />
-            <a href="./11일차/ex11-03.html">console 기본3</a><br />
-            <a href="./11일차/ex11-03a.html">console기본3a</a><br />
-            <a href="./11일차/ex11-04.html">console(true,false)</a><br />
-            <a href="./11일차/ex11-04a.html">논리곱연산</a><br />
-            <a href="./11일차/ex11-05.html">cofirm</a><br />
-            <a href="./11일차/ex11-05a.html">prompt</a><br />
-            <a href="./11일차/ex11-05b.html">prompt연습</a><br />
-            <a href="./11일차/ex11-06.html">const${}</a><br />
-            <a href="./11일차/ex11-06a.html">구구단 연습 </a><br />
-            <a href="./11일차/ex11-06b.html">javascript표 연습 </a><br />
+            <div class="table-wrapper">
+              <h2 name="sub">11일차</h2>
+              <a href="./11일차/ex11-01.html">console 기본</a><br />
+              <a href="./11일차/ex11-02.html">console 기본2</a><br />
+              <a href="./11일차/ex11-02a.html">console 연산</a><br />
+              <a href="./11일차/ex11-03.html">console 기본3</a><br />
+              <a href="./11일차/ex11-03a.html">console기본3a</a><br />
+              <a href="./11일차/ex11-04.html">console(true,false)</a><br />
+              <a href="./11일차/ex11-04a.html">논리곱연산</a><br />
+              <a href="./11일차/ex11-05.html">cofirm</a><br />
+              <a href="./11일차/ex11-05a.html">prompt</a><br />
+              <a href="./11일차/ex11-05b.html">prompt연습</a><br />
+              <a href="./11일차/ex11-06.html">const${}</a><br />
+              <a href="./11일차/ex11-06a.html">구구단 연습 </a><br />
+              <a href="./11일차/ex11-06b.html">javascript표 연습 </a><br />
+            </div>
           </td>
           <td>
-            <h2 name="sub">12일차</h2>
-            <a href="./12일차/ex12-01.html">예제1</a><br />
-            <a href="./12일차/ex12-02.html">예제2</a><br />
-            <a href="./12일차/ex12-02a.html">if문</a><br />
-            <a href="./12일차/ex12-03.html">증감연산자</a><br />
-            <a href="./12일차/ex12-03a.html">예제3a</a><br />
-            <a href="./12일차/ex12-04.html">js파일사용</a><br />
-            <a href="./12일차/ex12-05.html">예제5</a><br />
-            <a href="./12일차/ex12-05a.html">예제5a</a><br />
-            <a href="./12일차/ex12-06.html">document</a><br />
-            <a href="./12일차/ex12-06a.html">document2</a><br />
-            <a href="./12일차/ex12-06b.html">document3</a><br />
-            <a href="./12일차/ex12-07.html">중첩조건문 </a><br />
-            <a href="./12일차/ex12-08.html">연습문제 </a><br />
-            <a href="./12일차/ex12-08a.html">연습문제 보충 </a><br />
-            <a href="./12일차/ex12-test.html">CSS연습문제</a><br />
+            <div class="table-wrapper">
+              <h2 name="sub">12일차</h2>
+              <a href="./12일차/ex12-01.html">예제1</a><br />
+              <a href="./12일차/ex12-02.html">예제2</a><br />
+              <a href="./12일차/ex12-02a.html">if문</a><br />
+              <a href="./12일차/ex12-03.html">증감연산자</a><br />
+              <a href="./12일차/ex12-03a.html">예제3a</a><br />
+              <a href="./12일차/ex12-04.html">js파일사용</a><br />
+              <a href="./12일차/ex12-05.html">예제5</a><br />
+              <a href="./12일차/ex12-05a.html">예제5a</a><br />
+              <a href="./12일차/ex12-06.html">document</a><br />
+              <a href="./12일차/ex12-06a.html">document2</a><br />
+              <a href="./12일차/ex12-06b.html">document3</a><br />
+              <a href="./12일차/ex12-07.html">중첩조건문 </a><br />
+              <a href="./12일차/ex12-08.html">연습문제 </a><br />
+              <a href="./12일차/ex12-08a.html">연습문제 보충 </a><br />
+              <a href="./12일차/ex12-test.html">CSS연습문제</a><br />
+            </div>
           </td>
           <td>
-            <h2 name="sub">13일차</h2>
-            <a href="./13일차/ex13-01.html">Date추출</a><br />
-            <a href="./13일차/ex13-01a.html">Date추출(jsdelvr)</a><br />
-            <a href="./13일차/ex13-01b.html">Date추출2(jsdelvr)</a><br />
-            <a href="./13일차/ex13-01c.html">Date추출3(jsdelvr)</a><br />
-            <a href="./13일차/ex13-02.html">예제2</a><br />
-            <a href="./13일차/ex13-03.html">예제3</a><br />
-            <a href="./13일차/ex13-03a.html">for문</a><br />
-            <a href="./13일차/ex13-03b.html">for문 구구단</a><br />
-            <a href="./13일차/ex13-04.html">자리배치도연습</a><br />
+            <div class="table-wrapper">
+              <h2 name="sub">13일차</h2>
+              <a href="./13일차/ex13-01.html">Date추출</a><br />
+              <a href="./13일차/ex13-01a.html">Date추출(jsdelvr)</a><br />
+              <a href="./13일차/ex13-01b.html">Date추출2(jsdelvr)</a><br />
+              <a href="./13일차/ex13-01c.html">Date추출3(jsdelvr)</a><br />
+              <a href="./13일차/ex13-02.html">예제2</a><br />
+              <a href="./13일차/ex13-03.html">예제3</a><br />
+              <a href="./13일차/ex13-03a.html">for문</a><br />
+              <a href="./13일차/ex13-03b.html">for문 구구단</a><br />
+              <a href="./13일차/ex13-04.html">자리배치도연습</a><br />
+            </div>
           </td>
           <td>
-            <h2 name="sub">14일차</h2>
-            <a href=""></a>
+            <div class="table-wrapper">
+              <h2 name="sub">14일차</h2>
+              <a href="./14일차/ex14-01.html">자리배치도해설</a><br />
+              <a href="./14일차/ex14-02.html">랜덤고급</a><br />
+              <a href="./14일차/ex14-02a.html">소수점자리</a><br />
+              <a href="./14일차/ex14-03.html">삼항연산자</a><br />
+              <a href="./14일차/ex14-03a.html">switch</a><br />
+              <a href="./14일차/ex14-03b.html">switch2</a><br />
+              <a href="./14일차/ex14-03c.html">if문연습</a><br />
+              <a href="./14일차/ex14-04.html">배열</a><br />
+              <a href="./14일차/ex14-05.html">splice,push(배열삭제,추가)</a
+              ><br />
+              <a href="./14일차/ex14-05a.html"
+                >배열위치(indexOf,includes,find,findIndex)</a
+              ><br />
+              <a href="./14일차/ex14-05b.html">배열 연습 </a><br />
+              <a href="./14일차/ex14-05c.html">배열5c</a><br />
+              <a href="./14일차/ex14-06.html">예제6</a><br />
+              <a href="./14일차/ex14-07.html">예제7</a><br />
+            </div>
           </td>
           <td>
-            <h2 name="sub">15일차</h2>
-            <a href=""></a>
+            <div class="table-wrapper">
+              <h2 name="sub">15일차</h2>
+              <a href=""></a>
+            </div>
           </td>
         </tr>
       </tbody>
