--- a/index.html
+++ b/index.html
@@ -314,8 +314,7 @@
               <a href="./13일차/ex13-01a.html">Date추출(jsdelvr)</a><br />
               <a href="./13일차/ex13-01b.html">Date추출2(jsdelvr)</a><br />
               <a href="./13일차/ex13-01c.html">Date추출3(jsdelvr)</a><br />
-              <a href="./13일차/ex13-02.html">예제2</a><br />
-              <a href="./13일차/ex13-03.html">예제3</a><br />
+              <a href="./13일차/ex13-02.html">랜덤</a><br />
               <a href="./13일차/ex13-03a.html">for문</a><br />
               <a href="./13일차/ex13-03b.html">for문 구구단</a><br />
               <a href="./13일차/ex13-04.html">자리배치도연습</a><br />
@@ -341,12 +340,21 @@
               <a href="./14일차/ex14-05c.html">배열5c</a><br />
               <a href="./14일차/ex14-06.html">예제6</a><br />
               <a href="./14일차/ex14-07.html">예제7</a><br />
+              <a href="./14일차/ex14-08.html">중첩반복문</a><br />
             </div>
           </td>
           <td>
             <div class="table-wrapper">
               <h2 name="sub">15일차</h2>
-              <a href=""></a>
+              <a href="./15일차/ex15-01.html">while </a><br />
+              <a href="./15일차/ex15-02.html">랜덤활용</a><br />
+              <a href="./15일차/ex15-02a.html">랜덤활용 해석</a><br />
+              <a href="./15일차/ex15-03.html">예제3</a><br />
+              <a href="./15일차/ex15-04.html">예제4</a><br />
+              <a href="./15일차/ex15-05.html">예제5</a><br />
+              <a href="./15일차/ex15-06.html">예제6</a><br />
+              <a href="./15일차/ex15-07.html">예제7</a><br />
+              <a href="./15일차/ex15-08.html">예제8</a><br />
             </div>
           </td>
         </tr>
