--- a/index.html
+++ b/index.html
@@ -349,12 +349,45 @@
               <a href="./15일차/ex15-01.html">while </a><br />
               <a href="./15일차/ex15-02.html">랜덤활용</a><br />
               <a href="./15일차/ex15-02a.html">랜덤활용 해석</a><br />
-              <a href="./15일차/ex15-03.html">예제3</a><br />
-              <a href="./15일차/ex15-04.html">예제4</a><br />
-              <a href="./15일차/ex15-05.html">예제5</a><br />
-              <a href="./15일차/ex15-06.html">예제6</a><br />
-              <a href="./15일차/ex15-07.html">예제7</a><br />
-              <a href="./15일차/ex15-08.html">예제8</a><br />
+              <a href="./15일차/ex15-02b.html">랜덤활용 해석2</a><br />
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">16일차</h2>
+              <a href="./16일차/ex16-01.html">주사위횟수</a><br />
+              <a href="./16일차/ex16-01a.html">주사위횟수 해설</a><br />
+              <a href="./16일차/ex16-02.html">함수, 호이스팅</a><br />
+              <a href="./16일차/ex16-02a.html">호이스팅2</a><br />
+              <a href="./16일차/ex16-02b.html">호이스팅3</a><br />
+              <a href="./16일차/ex16-02c.html">함수4 </a><br />
+              <a href="./16일차/ex16-03.html">전역변수, 지역변수 구분</a><br />
+              <a href="./16일차/ex16-04.html">즉시실행함수</a><br />
+              <a href="./16일차/ex16-05.html">예제8</a><br />
+              <a href="./16일차/ex16-06.html">버튼에 함수사용</a><br />
+              <a href="./16일차/ex16-07.html">화살표함수</a><br />
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">17일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">18일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">19일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">20일차</h2>
             </div>
           </td>
         </tr>
