--- a/index.html
+++ b/index.html
@@ -382,6 +382,15 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">18일차</h2>
+              <a href="./18일차/ex18-01.html">최솟값을 구하는 함수</a><br />
+              <a href="./18일차/ex18-01a.html">배열(전개연산자)</a><br />
+              <a href="./18일차/ex18-02.html">예제2</a><br />
+              <a href="./18일차/ex18-02a.html">callback</a><br />
+              <a href="./18일차/ex18-03.html">setTimeout</a><br />
+              <a href="./18일차/ex18-03a.html">setInterval</a><br />
+              <a href="./18일차/ex18-03b.html">타이머 응용</a><br />
+              <a href="./18일차/ex18-04.html">시계만들기</a><br />
+              <a href="./18일차/ex18-05.html">스톱워치</a><br />
             </div>
           </td>
           <td>
