--- a/18일차/ex18-05.html
+++ b/18일차/ex18-05.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      #btnbox {
+        display: flex;
+        justify-content: space-evenly;
+        position: relative;
+        margin: 60px;
+      }
+      button {
+        width: 200px;
+        height: 100px;
+        font-size: 3rem;
+        border: none;
+        background-color: white;
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, 1);
+      }
+      #watch {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* height: 100vh; */
+      }
       #stop-watch {
         display: flex;
         border-radius: 50%;
@@ -16,6 +36,17 @@
         align-items: center;
         position: relative;
       }
+      #digital {
+        border: 1px solid black;
+        width: 400px;
+        height: 200px;
+        margin: 20px;
+        display: flex;
+        font-size: 7rem;
+        justify-content: center;
+        align-items: center;
+      }
+
       #min,
       #sec {
         position: absolute;
@@ -26,35 +57,107 @@
         transform-origin: left;
       }
       #min {
-        transform: rotate(90deg);
+        transform: rotate(-90deg);
         width: 60px;
       }
       #sec {
         width: 100px;
         background-color: blue;
-        transform: rotate(45deg);
+        transform: rotate(-90deg);
+      }
+
+      table {
+        border: 1px solid black;
+        /* display: flex; */
+        justify-content: center;
+        /* align-items: center; */
+        width: 100%;
+        /* height: 300px; */
+        position: relative;
+        top: 30px;
+        border-collapse: collapse;
+      }
+      td {
+        border: 1px solid black;
       }
     </style>
   </head>
   <body>
     <a href="../index.html">홈으로</a>
-    <button></button>
-    <div id="stop-watch">
-      <div id="min"></div>
-      <div id="sec"></div>
+    <div id="btnbox">
+      <button>시작</button>
+      <button>일시정지</button>
+      <button>기록하기</button>
+      <button>초기화</button>
     </div>
+    <div id="watch">
+      <div id="stop-watch">
+        <div id="min"></div>
+        <div id="sec"></div>
+      </div>
+      <div id="digital">
+        <div id="secD">00:00</div>
+      </div>
+    </div>
+
+    <table id="checkBox"></table>
+
     <script>
       const btn = document.querySelectorAll("button");
       const sec = document.querySelector("#sec");
       const min = document.querySelector("#min");
+      const secD = document.querySelector("#secD");
+      const checkTime = document.querySelector("#checkBox");
+      let list = "";
       let time = 0;
-      setInterval(() => {
-        time += 1;
-        sec.style.transform = `rotate(${-90 + time * 3.6}deg)`;
-      }, 10);
-      setInterval(() => {
-        console.log(time);
-      }, 1000);
+      let start_watch;
+      let count = 0;
+      let running = false;
+
+      const start = () => {
+        if (!running) {
+          running = true;
+          start_watch = setInterval(() => {
+            time += 1;
+            sec.style.transform = `rotate(${-90 + time * 3.6}deg)`;
+            min.style.transform = `rotate(${-90 + time * 0.06}deg)`;
+            secD.innerHTML = `${(time * 0.01).toFixed(2)}`;
+            console.log(running);
+          }, 10);
+        }
+      };
+
+      const stop = () => {
+        clearInterval(start_watch);
+        running = false;
+      };
+
+      const check = () => {
+        count++;
+        list += `
+        <tr>
+          <td>기록${count}</td>
+          <td>${(time * 0.01).toFixed(2)}초</td>
+        </tr>`;
+        checkTime.innerHTML = list;
+      };
+
+      const reset = () => {
+        sec.style.transform = `rotate(-90deg)`;
+        min.style.transform = `rotate(-90deg)`;
+        clearInterval(start_watch);
+        secD.innerHTML = "00:00";
+        time = 0;
+        count = 0;
+        list = "";
+        checkTime.innerHTML = list;
+        running = false;
+      };
+
+      btn[0].addEventListener("click", start);
+      btn[1].addEventListener("click", stop);
+      btn[2].addEventListener("click", check);
+      btn[3].addEventListener("click", reset);
     </script>
   </body>
 </html>
