--- a/index.html
+++ b/index.html
@@ -412,6 +412,25 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">20일차</h2>
+              <a href="./20일차/ex20-01.html">for들의 속도 테스트</a> <br />
+              <a href="./20일차/ex20-01a.html">p246</a> <br />
+              <a href="./20일차/ex20-01b.html">메소드 특징</a> <br />
+              <a href="./20일차/ex20-02.html">메소드 특징2</a> <br />
+              <a href="./20일차/ex20-02a.html">객체의 속성과 메소드 사용하기</a>
+              <br />
+              <a href="./20일차/ex20-02b.html"
+                >객체의 속성과 메소드 사용하기2</a
+              >
+              <br />
+              <a href="./20일차/ex20-02c.html">Number.isFinite</a> <br />
+              <a href="./20일차/ex20-03.html">trim,split</a><br />
+              <a href="./20일차/ex20-03a.html">동기, 비동기</a><br />
+              <a href="./20일차/ex20-04.html">문서객체 생성하기</a><br />
+              <a href="./20일차/ex20-04a.html">문서객체 생성하기2</a><br />
+              <a href="./20일차/ex20-04b.html">문서객체 생성하기3</a><br />
+              <a href="./20일차/ex20-04c.html">키보드 이벤트 감지</a><br />
+              <a href="./20일차/ex20-05.html">예제 5</a><br />
+              <br />
             </div>
           </td>
         </tr>
