--- a/index.html
+++ b/index.html
@@ -426,11 +426,49 @@
               <a href="./20일차/ex20-03.html">trim,split</a><br />
               <a href="./20일차/ex20-03a.html">동기, 비동기</a><br />
               <a href="./20일차/ex20-04.html">문서객체 생성하기</a><br />
-              <a href="./20일차/ex20-04a.html">문서객체 생성하기2</a><br />
+              <a href="./20일차/ex20-04a.html"
+                >문서객체 생성하기(배열->리스트)</a
+              ><br />
               <a href="./20일차/ex20-04b.html">문서객체 생성하기3</a><br />
               <a href="./20일차/ex20-04c.html">키보드 이벤트 감지</a><br />
-              <a href="./20일차/ex20-05.html">예제 5</a><br />
+              <a href="./20일차/ex20-05.html">키보드 이벤트 감지2</a><br />
               <br />
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">21일차</h2>
+              <a href="./21일차/ex21-01.html">팩맨 만들기</a> <br />
+              <a href="./21일차/ex21-01a.html">querySelector/getelement</a>
+              <br />
+              <a href="./21일차/ex21-01b.html">클릭횟수증가</a> <br />
+              <a href="./21일차/ex21-02.html">chart.js</a> <br />
+              <a href="./21일차/ex21-02a.html">예제2a</a> <br />
+              <a href="./21일차/ex21-03.html">p.321</a><br />
+              <a href="./21일차/ex21-03a.html">p.324</a><br />
+              <br />
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">22일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">23일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">24일차</h2>
+            </div>
+          </td>
+          <td>
+            <div class="table-wrapper">
+              <h2 name="sub">25일차</h2>
             </div>
           </td>
         </tr>
