--- a/index.html
+++ b/index.html
@@ -454,11 +454,21 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">22일차</h2>
+              <a href="./22일차/ex22-01.html">예제1</a><br />
+              <a href="./22일차/ex22-01a.html">예제2</a><br />
+              <a href="./22일차/ex22-01b.html">예제3</a><br />
+              <a href="./22일차/ex22-02.html">스톱워치 해설 </a><br />
+              <a href="./22일차/ex22-03.html">예제5</a><br />
+              <a href="./22일차/ex22-03a.html">예제6</a><br />
             </div>
           </td>
           <td>
             <div class="table-wrapper">
               <h2 name="sub">23일차</h2>
+              <a href="./23일차/ex23-01.html">예제1</a> <br />
+              <a href="./23일차/ex23-01b.html">예제1-b</a> <br />
+              <a href="./portfolio.html">포트폴리오</a> <br />
+              <a href="./23일차/ex23-02.html">예제2</a> <br />
             </div>
           </td>
           <td>
