--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">23일차</h2>
-              <a href="./23일차/ex23-01.html">예제1</a> <br />
-              <a href="./23일차/ex23-01b.html">예제1-b</a> <br />
+              <a href="./23일차/ex23-01.html">스크롤</a> <br />
+              <a href="./23일차/ex23-01b.html">스크롤-b</a> <br />
               <a href="./portfolio.html">포트폴리오</a> <br />
               <a href="./23일차/ex23-02.html">예제2</a> <br />
             </div>
@@ -474,6 +474,9 @@
           <td>
             <div class="table-wrapper">
               <h2 name="sub">24일차</h2>
+              <a href="./24일차/ex24-01.html">사진전환(버튼클릭)</a><br />
+              <a href="./24일차/ex24-01a.html">사진전환(시진클릭)</a><br />
+              <a href="./24일차/ex24-02.html">예제2</a><br />
             </div>
           </td>
           <td>
