--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
         display: flex;
         font-size: 1.5rem;
         justify-content: space-between;
+        padding: 0 10px
         align-items: center;
         height: 5%;
       }
